# hippomenes

./: .gitignore  CHANGELOG.md  README.md  TOOLING.md  hippomenes.drawio  spram.tcl
debug/: README.md  openocd.cfg  program.cfg  program_raw.cfg
fpga/: ARTY.xdc  README.md  arty.tcl  arty_def_val.txt  arty_dump.txt  build_arty.sh  compile_and_program.cmd  hippomenes.tcl  program.bash  program.sh  program.tcl  program_arty.cmd  program_arty.sh  program_arty.tcl  run.cmd  spram.tcl  tb_top_arty_behav.wcfg  vivado_pid11364.str  vivado_pid15900.str  vivado_pid8556.str
rtic5/: Cargo.toml  data_0.mem  data_1.mem  data_2.mem  data_3.mem  memory.x  run.sh  text.mem
rust_examples/: Cargo.toml  README.md  arty.tcl  asm.s  assembly.objdump  binary.mem  data.mem  data0.mem  data1.mem  data2.mem  data3.mem  data_0.mem  data_1.mem  data_2.mem  data_3.mem  disasm.s  expanded.rs  memory.x  memory_asm.x  memory_rust.x  objdump.s  run.sh  text.mem
rust_examples/.cargo/: config.toml
rust_examples/examples/: asm_blinky.rs  asm_blinky.s  asm_blinky2.rs  asm_blinky2.s  asm_csr_block.rs  asm_csr_block.s  asm_int_return.rs  asm_int_return.s  asm_interrupt_nesting.rs  asm_interrupt_nesting.s  asm_intr.rs  asm_intr.s  asm_loop.rs  asm_loop.s  asm_memory.rs  asm_memory.s  asm_mpu.rs  asm_mpu.s  asm_mpu2.rs  asm_mpu2.s  asm_mpu3.rs  asm_mpu3.s  asm_mpu4.rs  asm_mpu4.s  asm_mpu5.rs  asm_mpu5.s  asm_mpu6.rs  asm_mpu6.s  asm_mpu7.rs  asm_mpu7.s  asm_mul.rs  asm_mul.s  asm_pmp.rs  asm_pmp.s  asm_rodata.rs  asm_rodata.s  asm_rtmt.rs  asm_rtmt.s  asm_timer_task.rs  asm_timer_task.s  (+25 more)
(+190 files in other folders)
